# django-guid

./: .black  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  README.md  README.rst  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  pythonpackage.yml  requirements-dev.txt  requirements-publish-pypi.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other--questions--remarks---.md
.github/workflows/: coverage.yml  publish_to_pypi.yml  pythonpackage.yml  test.yml
demoproj/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
demoproj/services/: async_services.py  useless_file.py
demoproj/views/: async_views.py  sync_views.py
demoproj_asgi/: asgi.py  manage.py  settings.py  urls.py  views.py  wsgi.py
demoproj_asgi/services/: useless_file.py
django_guid/: __init__.py  api.py  apps.py  config.py  context.py  integrations.py  log_filters.py  middleware.py  signals.py  tests.py  utils.py
django_guid/celery/: config.py  context.py  log_filters.py  logging.py  signals.py
django_guid/integrations/: __init__.py  base.py  celery.py  sentry.py
django_guid/integrations/celery/: __init__.py  config.py  context.py  integration.py  log_filters.py  logging.py  signals.py
django_guid_injection/: log_filters.py  middleware.py
docs/: README_PYPI.rst  api.rst  conf.py  configuration.rst  extended_example.rst  index.rst  install.rst  integrations.rst  publish.rst  settings.rst  troubleshooting.rst  upgrading.rst
examples/async-views/: README.md
examples/async-views/src/: asgi.py  services.py  settings.py  urls.py  views.py
examples/celery/: README.md  docker-compose.yml  manage.py
examples/celery/src/: celery.py  settings.py
examples/ignore-url/: README.md
examples/ignore-url/src/: services.py  settings.py  urls.py  views.py
examples/sentry/: README.md
examples/sentry-and-celery/: README.md
examples/sync-views/: README.md
examples/sync-views/src/: settings.py  urls.py  views.py  wsgi.py
tests/: conftest.py  requirements-test-base.txt  requirements-test-django2.txt  requirements-test-django3.txt  requirements-test-django31.txt  requirements-test.txt
tests/functional/: test_async_middleware.py  test_celery_signals.py  test_integration_base_class.py  test_middleware.py  test_sentry_integration.py  test_set_get_del_context.py  test_sync_middleware.py
tests/unit/: .coverage.Sondres-MBP.88325.438243  test_celery_config.py  test_celery_signals.py  test_config.py  test_guid_validation.py  test_uuid_length.py
