[tool.poetry]
name = "django-guid"
version = "3.0.0"  # Remember to also change __init__.py version
description = "Middleware that enables single request-response cycle tracing by injecting a unique ID into project logs"
authors = ["Jonas Krüger Svensson <jonas-ks@hotmail.com>"]
license = "BSD-4-Clause"
readme = "docs/README_PYPI.rst"
homepage = "https://github.com/snok/django-guid"
repository = "https://github.com/snok/django-guid"
documentation = "https://django-guid.readthedocs.io/en/latest"
keywords = [
    'asgi', 'async', 'async support', 'correlation', 'correlation-id', 'django', 'guid', 'log id', 'logging',
    'logging id', 'middleware', 'request', 'request id', 'request-id', 'uuid', 'web'
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 2.2',
    'Framework :: Django :: 3.0',
    'Framework :: Django :: 3.1',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Internet :: WWW/HTTP :: WSGI',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
include = ["CHANGELOG.rst"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.1"


[tool.poetry.dev-dependencies]
pre-commit = "^1.21.0"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"
pytest = "^5.4"
pytest-cov = "^2.8.1"
pytest-django = "^4.1.0"
pytest-mock = "^3"
pytest-subtests = "^0.3"
djangorestframework = "^3.11.0"
sentry-sdk = "^0.14.3"
mypy = "^0.790"
gunicorn = "^20.0.4"
uvicorn = "^0.12.1"
pytest-asyncio = "^0.14.0"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    (\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\.github|\docs|\tests|\__pycache__)
)
'''

[tool.isort]
profile = "black"
src_paths = ["django_guid"]
combine_as_imports = true
line_length = 120
sections = [
    'FUTURE',
    'STDLIB',
    'DJANGO',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER'
]
known_django = ['django']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
